crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__any_all_operators.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT *
  FROM test
 WHERE id = ANY(ARRAY[1, 2, 3]) AND status <> ALL(ARRAY['deleted', 'archived'])
