crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__basic_select.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT id, name
  FROM patient
