crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__complex_jsonb_chaining.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT (resource -> 'name') -> 'family', ((resource -> 'name') -> 0) ->> 'given'
  FROM patient
