crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__create_table_with_constraints.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
CREATE TABLE patient (id INT PRIMARY KEY, name TEXT NOT NULL, email TEXT UNIQUE)
