crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__cte_with_where.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
 WITH active_patients AS (SELECT *
 FROM patient
WHERE active = TRUE) SELECT *
 FROM active_patients
